# hs-bot

./: Makefile  hs-bot.cabal
IRC/: Core.hs  Error.hs  FMessage.hs  FParser.hs  IRC.hs  Internal.hs  Message.hs  Net.hs  Parser.hs  Proxy.hs  Tunnel.hs  Util.hs  parser.hs
misc/: commandcodes.txt  errcodes.txt  replycodes.txt
src/IRC/: Message.hs  Parser.hs
tests/: ftest.hs  test.hs
