name: hs-bot
version: 0.1
cabal-version: >= 1.14
author: Ryan Feng <odayfans@gmail.com>
build-type: Simple

Library
    build-depends: base >= 2.0, attoparsec >= 0.10.4, bytestring >= 0.9, text >= 0.10,
                   parsec >= 3.0, network >= 2.2, configurator >= 0.2
    default-language: Haskell2010
    exposed-modules: IRC.FMessage IRC.FParser
