name: hs-bot
version: 0.1
cabal-version: >= 1.14
author: Ryan Feng <odayfans@gmail.com>
build-type: Simple

Library
    build-depends: base >= 2.0, attoparsec >= 0.10.4, bytestring >= 0.9, text >= 0.10,
                   network >= 2.2, stm >= 2.4, stm-chans >= 1.3, pipes >= 3.0
    default-language: Haskell2010
    exposed-modules: IRC.Message IRC.Parser
